force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_2_Incentive_Percentage__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_2_Incentive_Percentage__c</fullName>
    <inlineHelpText>Snapshot of the qualified slab&apos;s incentive percent (Monthly/Quarterly) used for S&amp;D Parameter 2, captured at calculation time so it survives if the slab is later changed or deleted.</inlineHelpText>
    <label>S &amp; D Parameter 2 Incentive Percentage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>