force-app/main/default/objects/PBIS_Target__c/fields/Total_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Incentive_Amount__c</fullName>
    <formula>Total_Incentive_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>