force-app/main/default/objects/PBIS_Target__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The salesperson. Mapped during import (e.g. by Username). Designation derives from this User.</inlineHelpText>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Payroll__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PBIS_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>