force-app/main/default/objects/PBIS_Target__c/validationRules/User_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>Please Select User</errorMessage>
</ValidationRule>